# graphs-in-rust

./: Cargo.toml  README.md  bench.py  bfs.txt
datasets/: dutchcollege.out  gplus.out  moreno_taro.out  opsahl-openflights.out  test.out
reports/: bc.txt  bfs.txt  cc.txt  pr.txt  sssp.txt  tc.txt
reports/astro/: bc.txt  bfs.txt  cc.txt  pr.txt  sssp.txt  tc.txt
reports/euroroad/: bc.txt  bfs.txt  cc.txt  pr.txt  sssp.txt  tc.txt
reports/facebook/: bc.txt  bfs.txt  cc.txt  pr.txt  sssp.txt  tc.txt
reports/gplus/: bc.txt
reports/openflights/: bc.txt  bfs.txt  cc.txt  pr.txt  sssp.txt  tc.txt
reports/ops/: ops.txt
reports/petster/: bc.txt  bfs.txt  cc.txt  pr.txt  sssp.txt  tc.txt
src/: bc.rs  benchmark.rs  bfs.rs  builder.rs  cc.rs  generator.rs  graph.rs  lib.rs  ops.rs  pr.rs  slidingqueue.rs  sssp.rs  tc.rs  timer.rs  types.rs
src/graphmodels/: arc.rs  arena.rs  cc.rs  gc.rs  mod.rs  rc.rs  rcsorted.rs
src/graphmodels/epoch/: adjlist.rs  lftt.rs  mdlist.rs  mod.rs  old.rs
src/treenodes/: arc.rs  cc.rs  mod.rs  msgc.rs  rc.rs
