[package]
name = "gapbs"
version = "0.1.0"
authors = ["rasviitanen <rasviitanen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [dev-dependencies]

[dependencies]
criterion = { version = "0.3.2", git = "https://github.com/rasviitanen/criterion.rs" }
criterion-macro = "0.3.2"
time = "0.1.34"
rand = "0.7"
# Get raton form git to enable `step_by`, as it is
# currently not available in the latest published version (1.3.0)
rayon = { git = "https://github.com/rayon-rs/rayon" }
bit-vec = "0.6.1"
itertools = "0.9"
gc = "*"
gc_derive = "*"
generational-arena = "0.2.7"
bacon_rajan_cc = "0.2"